# azure-slack-bridge

./: Cargo.toml  LICENSE  README.md  sample-alert.json  spin.toml
src/: azure_common_alert_schema.rs  lib.rs
