[package]
name = "azure-to-slack-webhook"
authors = ["Kate Goldenring <kate.goldenring@fermyon.com>"]
description = "Webhook that forwards Azure alerts to a Slack Incoming Webhook"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
tokio = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = "3.1.0"

[workspace]